little fix for other items, change TimerTask to Scheduler